marquee jump fix

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body {
 }
 
 .hero_wrapper .marquee_wrapper {
+    opacity: 0;
     order: 2;
     width: 100%;
 }
